welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value setColeurBrosse
  setColeurBrosse(c)
  ^